<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:textSize="21sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_marginTop="200dp"
        android:background="@drawable/buttonstyle"/>
    <Button
    android:id="@+id/btn_about_us"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/about_us"
    android:textSize="21sp"
    android:textColor="@color/white"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:background="@drawable/buttonstyle"/>
    <Button
        android:id="@+id/btn_contact_us"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonstyle"/>
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonstyle"/>
</LinearLayout>