<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lessons"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="title"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#641ea9"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:padding="20dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:cardCornerRadius="12dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_conversation_En"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="25sp"
                        android:padding="8dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/txt_conversation_Fa"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="25sp"
                        android:visibility="gone"
                        android:textColor="#066c06"/>
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_speak"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/pronunciation"
            android:textSize="15sp"
            android:background="@drawable/buttonstyle"/>
        <ToggleButton
            android:id="@+id/btn_translate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textOff="@string/Translate"
            android:textOn="@string/english"
            android:textSize="15sp"
            android:background="@drawable/buttonstyle"/>
    </LinearLayout>
</LinearLayout>